--- a/Aidhurt/app/src/main/res/values/strings.xml
+++ b/Aidhurt/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">Aidhurt</string>
-
+    <string name="app_name">Buscaminas</string>
     <string name="title_activity_juego">Juego</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
