--- a/Aidhurt/app/src/main/res/values/strings.xml
+++ b/Aidhurt/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_juego">Juego</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
